# lippy

./: .gitignore  LICENSE  README.md  setup.cfg
.github/.workflows/: tests.yaml
.github/workflows/: tests.yaml
lippy/: __init__.py  _log_modes.py  _simplex_table.py  branch_and_bound.py  brute_force.py  cutting_plane_method.py  dual_lp.py  simplex_method.py  zero_sum_game.py
requirements/: base.in  base.txt  dev.in  dev.txt
src/lippy/: __init__.py  enums.py  exceptions.py  types.py
src/lippy/bnb/: __init__.py  branch_and_bound.py
src/lippy/brute_force/: brute_force.py
src/lippy/dual/: __init__.py  dual_lp.py
src/lippy/game/: __init__.py  zero_sum_game.py
src/lippy/gomory/: __init__.py  cutting_plane_method.py
src/lippy/simplex/: __init__.py  _simplex_table.py  simplex_method.py
tests/: test_branch_and_bound.py  test_brute_force.py  test_cutting_plane_method.py  test_simplex_method.py  test_zero_sum_game.py
