[metadata]
name = lippy
version = attr: lippy.__version__
author = Ilya Antonov
author_email = ispanelki@gmail.com
description = Lippy - solving linear programming problems.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    lippy
    algorithm
    algorithms
    game
    theory
    game_theory
    primal
    dual
    linear
    programming
    primal_linear_programming
    primal_lp
    dual_linear_programming
    dual_lp
    simplex
    simplex_method
    simplex_table
    branch_and_bound
    brute_force
    cutting_plane
    cutting_plane_method
    zero_sum_game
# license = MIT License
license_files = LICENSE
url = https://github.com/ispaneli/lippy
project_urls =
    Issue Tracker = https://github.com/ispaneli/lippy/issues
    Source = https://github.com/ispaneli/lippy/tree/master/src/lippy
    Say Thanks! = http://saythanks.io/to/ispanelki
    Documentation = https://github.com/ispaneli/lippy
classifiers =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: Russian
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Education
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business :: Scheduling
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8, <4
install_requires =
    numpy>=1.24.2
    prettytable>=3.6.0
    wcwidth>=0.2.6

[options.packages.find]
where = src